[tool.poetry]
name = "uc-python-github-io"
version = "0.1.0"
description = "UC Python Training Materials Hosted Online"
authors = ["Ethan Swan <ethanpswan@gmail.com>"]
readme = "README.md"
packages = [{include = "uc_python"}]

[tool.poetry.dependencies]
python = "^3.11"
nbconvert = "^7.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
